@@ -1,7 +1,3 @@
-// THIS FILE HAS BEEN AUTO-GENERATED BY THE 'DEAR BINDINGS' GENERATOR.
-// **DO NOT EDIT DIRECTLY**
-// https://github.com/dearimgui/dear_bindings
-
 #include "imgui.h"
 #include "imgui_internal.h"
 
@@ -11,7 +7,7 @@
 // Wrap this in a namespace to keep it separate from the C++ API
 namespace cimgui
 {
-#include "cimgui.h"
+#include "%OUTPUT_HEADER_NAME%"
 }
 
 // Manual helpers
