@@ -1,7 +1,3 @@
-// THIS FILE HAS BEEN AUTO-GENERATED BY THE 'DEAR BINDINGS' GENERATOR.
-// **DO NOT EDIT DIRECTLY**
-// https://github.com/dearimgui/dear_bindings
-
 #include "imgui.h"
 #include "imgui_internal.h"
 
@@ -16,7 +12,7 @@ namespace cimgui
 {
 extern "C"
 {
-#include "cimgui.h"
-#include "cimgui_internal.h"
+#include "%OUTPUT_HEADER_NAME_NO_INTERNAL%"
+#include "%OUTPUT_HEADER_NAME%"
 }
 }
